samples/_failures_safe/1761270846_7233d9_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_eac35948.c: In function ‘main’:
./samples/SAFE/__tmp_eac35948.c:137:24: error: missing terminating " character
  137 |                 printf("Error: Columns of A must equal rows of B
      |                        ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
./samples/SAFE/__tmp_eac35948.c:137:17: error: expected expression at end of input
  137 |                 printf("Error: Columns of A must equal rows of B
      |                 ^~~~~~
./samples/SAFE/__tmp_eac35948.c:137:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_eac35948.c:137:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_eac35948.c:137:17: error: expected declaration or statement at end of input
